# huggingface-sklearn

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
huggingface_sklearn/: decision_tree_regression.ipynb  linear_model_plot_logistic_l1_l2_sparsity.ipynb
